# remail

./: .dockerignore  Cargo.toml  Dockerfile.dev  README.md  compose.yaml
api/: Cargo.toml
api/src/: main.rs
maild/: Cargo.toml
maild/migrations/: 20250729230824_email_headers_table.sql
maild/src/: handler.rs  main.rs
migrations/: 20250727122538_initial.sql
server/: Cargo.toml
server/src/: main.rs
smtp/: Cargo.toml
smtp/migrations/: 20250729223448_non-null-timestamps.sql
smtp/src/: email.rs  handler.rs  lib.rs  main.rs  persistor.rs
src/: main.rs
types/: Cargo.toml
types/src/: lib.rs
ui/: Cargo.toml  Dioxus.toml
ui/assets/: main.css
ui/src/: api.rs  main.rs
