[package]
name = "remail"
version = "0.1.0"
edition = "2024"

[dependencies]
email_address = "0.2.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "time", "macros", "derive", "uuid", "json"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }
