[package]
name = "remail-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
email_address = "0.2.9"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "postgres", "time", "macros", "derive", "uuid", "json", "chrono"] }
tokio = { version = "1.47.0", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
remail-types = { path = "../types" }
tower-http = { version = "0.6", features = ["cors"] } 
