[package]
name = "remail-ui"
version = "0.1.0"
authors = ["Lucas Vieira <vieiralucas4@gmail.com>"]
edition = "2024"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
chrono = { version = "0.4", features = ["serde"] }
remail-types = { path = "../types" }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
